--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,22 @@
       content="Web site created using create-react-app"
     />
 
+       <script type="text/javascript">
+      // MIT License
+      // https://github.com/rafgraph/spa-github-pages
+      
+      (function(l) {
+        if (l.search[1] === '/' ) {
+          var decoded = l.search.slice(1).split('&').map(function(s) { 
+            return s.replace(/~and~/g, '&')
+          }).join('?');
+          window.history.replaceState(null, null,
+              l.pathname.slice(0, -1) + decoded + l.hash
+          );
+        }
+      }(window.location))
+    </script>
+
     <title>Сar dealership</title>
   </head>
   <body>
